--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
   "dependencies": {
     "nuxt": "^2.0.0",
     "ts-node": "^8.3.0",
-    "vue-property-decorator": "^8.2.1",
-    "vuex-class": "^0.3.2"
+    "vue-property-decorator": "^8.2.1"
   },
   "devDependencies": {
     "@nuxt/typescript": "^2.8.1",
