--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "heroku-postbuild": "npm run build"
   },
   "dependencies": {
+    "@nuxtjs/google-analytics": "^2.2.0",
     "@nuxtjs/pwa": "^3.0.0-beta.16",
     "nuxt": "^2.0.0",
     "ts-node": "^8.3.0",
